# agentvpn

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-smoke.yml  quality.yml
apps/admin/: README.md
apps/api/: README.md
apps/api/agentvpn_api/: __init__.py  config.py  dependencies.py  logging.py  main.py  rate_limit.py  security.py
apps/api/agentvpn_api/auth/: models.py  sessions.py  (+1 more)
apps/bot/: README.md
apps/mini-app/: README.md
apps/mini-app/public/: app.css  app.js  index.html  public-info.js
docs/: 3x-ui-contract.md  3x-ui-openapi.README.md  3x-ui-openapi.json  STITCH_DESIGN.md  architecture.md  backend-openapi.json  threat-model.md
docs/adr/: 0001-central-backend-source-of-truth.md  0002-xui-openapi-contract.md  0003-payment-webhook-source-of-truth.md  0004-separate-application-and-vpn-servers.md
docs/runbooks/: stage-1-owner-actions.md  stage-2-app-server-deployment.md  stage-3-plans-and-mock-payments.md  stage-4-enot-sbp-payments.md  stage-4-robokassa-sbp-payments.md
infrastructure/: __init__.py
infrastructure/docker/: README.md  api.Dockerfile
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 20260614_0001_initial_schema.py  20260614_0002_payment_integrity.py
infrastructure/reverse-proxy/: Caddyfile  README.md
infrastructure/scripts/: __init__.py  check_enot_connection.py  check_python_syntax.py  check_robokassa_connection.py  check_stage3_database.py  check_stage4_enot_webhook.py  check_stage4_robokassa_result.py  check_xui_connection.py  export_backend_openapi.py  fetch_xui_openapi.py  smoke_https_health.py  test_clean_postgres_migrations.sh  upsert_plan.py  validate_caddy.sh
infrastructure/testing/: migration-compose.yml
tests/: README.md
tests/contract/: test_backend_openapi_snapshot.py  test_deployment_configuration.py  test_xui_installed_contract.py  test_xui_openapi_fetch_helper.py  test_xui_openapi_snapshot.py
tests/unit/: test_config.py  test_database_locks.py  test_database_models.py  test_enot_payment_provider.py  test_enot_webhook.py  test_https_health_smoke.py  test_mock_payment_provider.py  test_robokassa_payment_provider.py  test_robokassa_result.py  test_sessions.py  test_subscription_periods.py  test_telegram_auth.py  test_xui_client.py  test_xui_models.py  test_xui_provider.py
(+33 files in other folders)
