[project]
name = "agentvpn"
version = "0.1.0"
description = "Production-oriented Telegram VPN access service"
requires-python = ">=3.12,<3.15"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
